samples/_failures_safe/1761191929_5a59cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b66a9237.c: In function ‘main’:
./samples/SAFE/__tmp_b66a9237.c:128:24: error: missing terminating " character
  128 |                 printf("Enter first matrix:\
      |                        ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b66a9237.c:128:17: error: expected expression at end of input
  128 |                 printf("Enter first matrix:\
      |                 ^~~~~~
./samples/SAFE/__tmp_b66a9237.c:128:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b66a9237.c:128:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b66a9237.c:128:17: error: expected declaration or statement at end of input
